--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,14 +19,14 @@
   <p id="status">Status: Please start recording</p>
 
   <div id="querySummary" class="query-box hidden">
-    <p><strong>NL Question:</strong> <span id="nlQuery"></span></p>
+    <p id="nlQuery"><strong>Natural Language:</strong></p>
     <p><strong> SQL Query:</strong></p>
     <pre id="sqlQuery"></pre>
   </div>
 
-  <div id="queryResults" class="result-table hidden">
+  <div id="queryResults" class="hidden">
     <p><strong>Query Results:</strong></p>
-    <table id="resultsTable"></table>
+    <table id="resultsTable" class="result-table"></table>
   </div>
 
   <script src="script.js"></script>
