finalized demo code.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,12 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Voice Query System</h1>
+  
+  <div class="header">
+    <h1>VoiceQuerySystem</h1>
+    <h5>Demo by: Alex Thurgood</h5>
+  </div>
+
 
   <div class="button-group">
     <button id="start">Start Recording</button>
